--- a/page7.html
+++ b/page7.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Creator</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -238,7 +238,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="h1AfHpnZfhzXNdizzMElrLVQ9zvha+H28XJnCdo/NRvHWQMt2t9bXiDDa6lJkQ6EUT2aNfVZmX5QfUEZJv0gjEgbblQ2n4F57qQl7IS0swkJYfAcNm+IJuWTseqyyZnf" data-form-email="true">
+                        <input type="hidden" value="SB9WMO8BOXf7uiihJri1KW4gq5WyYsQ/XOdBUuS/bc7Vch/EnUEQJRWulFSrX3vrdQsw+ASJq2IAJOYCFnPocN4MVoaSJuLybV71uI/X7CFrnT/RvdOjK2uE4UaiEJvD" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -270,7 +270,7 @@
                             <textarea class="form-control" name="message" rows="7" data-form-field="Message" id="form1-2v-message"></textarea>
                         </div>
 
-                        <div><button type="submit" class="btn btn-primary">CONTACT US</button></div>
+                        <div><button type="submit" class="btn btn-warning">LET'S SLAY!</button></div>
 
                     </form>
                 </div>
