--- a/page7.html
+++ b/page7.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Generator</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -238,7 +238,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="OK2jka3NmHKDc1qoMZy5SLKnnNdGamgaXQacAj8Slz9rL5/GwgqgcqythVQMzfJBiePRqCnb4GnIHjMXi26ZukiDMPoqWMUCvSARoOwWLwfSDY2nLnxNwkS51vbv9xGZ" data-form-email="true">
+                        <input type="hidden" value="fYfvr51AmIn0zWqNdx2dG2SAnFQcrkfkExGmoweo1EtNDq/7ux2+PhS9KcA7sKC637Yome6YscRX2UwvJq1joDmNy6BEi/Y2Q86hBrjY6U7okiesl/pCd6PAwg7nMks0" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
