--- a/page7.html
+++ b/page7.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -238,7 +238,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="QFs4ZUAsDxsaiJamVVrKaY2BilIhU6/pO2+T7zeOQEpkdejk4mQfhGpAq8ipksYg3+qm66tlEcaNR/N1+dQNOdC1tmghoFh4+g8qLcwKxhyt49pM2WXancLx6jmhsI0+" data-form-email="true">
+                        <input type="hidden" value="zozsruCWkZIm27Mp4gkPgnU+ie0YcmCykhF3K6nWzT7E2ycT9S4W4tupVzr6IOYHlu//pBCOiTLLztC+LIfMR6VXn1vCehbSua8XM5277aApZLz5wMiLxIj8jMuQevr3" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
