--- a/page6.html
+++ b/page6.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Maker</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1v" data-bg-video="https://www.youtube.com/embed/78LhiNGz-tE?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1v" data-bg-video="https://www.youtube.com/embed/78LhiNGz-tE?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -91,7 +91,7 @@
                   <h3 class="mbr-section-title display-2"><br><br>The Problem Discovery</h3>
                   <div class="lead">
 
-                    <p>Sling started over a cup of coffee when a group of engineering students were having coffee at their favorite cafe. A few sips of esspresso into their conversation, they realized the independent cafe didn't have a website or their favorite Thai restaurant. How would the rest of the world discover the hand crafted apple cider, espresso drink, with hand made whipped cream or pad Thai noodles with egg plant? Would the world come to an end?  <br><br>No worries, some coffee and Thai food obsessed engineering students were to the rescue. After discussing the issue further, the engineers realized that many of the local, small businesses they regularly frequented did not have a web presence. <br><br>With further market research and customer interviews, they discovered the major barriers for the small businesses were cost, lack of understanding of web development tools and limited time.<br><br>From this converation, over a cup of coffee, Sling came to be. Sling aims offer simple, affordable, yet elegant and effective technology solutions for small businesses to conquer the web giant.<br></p>
+                    <p>Sling started over a cup of coffee when a group of engineers were having coffee at their favorite cafe. A few sips of esspresso into their conversation, they realized the independent cafe didn't have a website or their favorite Thai restaurant. How would the rest of the world discover the hand crafted apple cider, espresso drink, with hand made whipped cream or pad Thai noodles with egg plant? Would the world come to an end?  <br><br>No worries, some coffee and Thai food obsessed engineering students were to the rescue. After discussing the issue further, the engineers realized that many of the local, small businesses they regularly frequented did not have a web presence. <br><br>With further market research and customer interviews, they discovered the major barriers for the small businesses were cost, lack of understanding of web development tools and limited time.<br><br>From this converation, over a cup of coffee, Sling came to be. Sling aims offer simple, affordable, yet elegant and effective technology solutions for small businesses to conquer the web giant.<br></p>
 
                   </div>
 
@@ -125,7 +125,7 @@
                   <h3 class="mbr-section-title display-2"><br><br>Why "Sling"?</h3>
                   <div class="lead">
 
-                    <p>In addition to a conversation fueled by Thai food and maybe a little, too much coffee, Sling was inspired by the timeless story of David and Goliath. At some point in life, we have all felt like David, the underdog of the story, facing seemingly insurmountable odds of life, especially as small business owners.  <br><br>In the story of David and Goliath, David is often praised as the hero when he is victorious against his super sized enemy Goliath.  However, adaquate attention is not given to the tools that allow David to have such a historic victory- a sling and five rocks. It's the beauty of these simple, low cost, yet elegant and effective technology that inspires the name, "Sling". <br><br>Our goal is not for our company to be the hero in the narrative of your company's story - it's for us to partner with you and provide the technology that positions you to be the hero in your own story.  We want you to be the giant slayer. Let's slay!&nbsp;</p>
+                    <p>In addition to a conversation fueled by Thai food and maybe a little, too much coffee, Sling was inspired by the timeless story of David and Goliath. At some point in life, we have all felt like David, the underdog of the story, facing the seemingly insurmountable odds of life, especially as small business owners.  <br><br>In the story of David and Goliath, David is often praised as the hero when he is victorious against his super sized enemy Goliath.  However, adaquate attention is not given to the tools that allow David to have such a historic victory- a sling and five rocks. It's the beauty of these simple, low cost, yet elegant and effective technology that inspires the name, "Sling". <br><br>Our goal is not for our company to be the hero in the narrative of your company's story - it's for us to partner with you and provide the technology that positions you to be the hero in your own story.  We want you to be the giant slayer. Let's slay!&nbsp;</p>
 
                   </div>
 
@@ -200,7 +200,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="cW8fWhnfzh0rjtRgSXraoBY45yiFMG4rQS15yQPrGfUZx6cvAgpA4HVQdn2nZJckdjziqHmowd4VfmVg9dgB8JZvezgABVNpf2CIZfrh3aewIggWiJUCxNebGdWf95SH" data-form-email="true">
+                        <input type="hidden" value="UmaPZtwHhKMSNRjL8gm04nRkSSFUiT6VfuN53c2x/qSlqXm0Jm3/vuOT/Y6PDeoeAP8zw3H/2JND80UOIzfrhHTV/rrJjc6TZozoQD+o69Ebrdn+afyrw4YiyNUJjTMx" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
