--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2" style="background-color: rgb(255, 243, 0);">
 
     
 
@@ -201,7 +201,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="JnwBBWJ5A9W9sIpteWsmL9jSEi0Cvj34un1xwX2usOVXj8E3m3NAUX2mxgYSazMrveuKu0gXtJUgO+9/vf8IvEtEUrFE/lt9eKkhB43x5tY4vdf3xoVymBQu66J+52le" data-form-email="true">
+                        <input type="hidden" value="wn1iKuSkQAmZlYMGcaLYa0jYNZY6zNIa50IwLZfc1JjUmvT2F5MrKiFQKzgExIPUIYekI23hz5nFWRhQAEVopxdRVmXVsOwXlZLd+ObRTpap404H1v601mshH+y/C2WM" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -286,5 +286,6 @@
   
   
   <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon"></i></a></div>
   </body>
 </html>
