--- a/page6.html
+++ b/page6.html
@@ -200,7 +200,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="UmaPZtwHhKMSNRjL8gm04nRkSSFUiT6VfuN53c2x/qSlqXm0Jm3/vuOT/Y6PDeoeAP8zw3H/2JND80UOIzfrhHTV/rrJjc6TZozoQD+o69Ebrdn+afyrw4YiyNUJjTMx" data-form-email="true">
+                        <input type="hidden" value="7c8qZ/8ShgBzi9dLKMa1+GVeozDC1CCXEbd7VXLy+a9czjUVVpFC2CDwoyrVRl1NRmpOrtpy/4KWBDtaQ4KEwnVmMLDgFk0qpYMU6zpLmVJx6/HlyRma4cxkjPAuk1KZ" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -263,5 +263,6 @@
   
   
   <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon"></i></a></div>
   </body>
 </html>
