--- a/About.html
+++ b/About.html
@@ -24,6 +24,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-100759439-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+<!-- /Google Analytics -->
+
+
 <section id="ext_menu-1t">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
@@ -57,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1v" data-bg-video="https://www.youtube.com/embed/78LhiNGz-tE?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Builder</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1v" data-bg-video="https://www.youtube.com/embed/78LhiNGz-tE?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -200,7 +215,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="QZ+u136xoK5xNSb3xvxd8ll6eGvtapNF5RLIcZQYYhmdsDh6WVYKr21KTnwNHGiWYP7Otq6SyWQuwaguD2z66dVEZzEJ7Is/SHr7pev3MUiQRWR81vP74tD6J6LSrtnO" data-form-email="true">
+                        <input type="hidden" value="KE/CfqqQKRx0d6ICy3YIPrX5yoASUQzd8Q7nCpMurlywB3l+k5WwxRQnzu7Z2nF6tHxl3NG7SVL5g0JrKK2UNgoMJ7GvHQ7KXGFhTCyzqHpSECPc17hZfRsWxrpH1OUI" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
