--- a/Services.html
+++ b/Services.html
@@ -24,6 +24,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-100759439-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+<!-- /Google Analytics -->
+
+
 <section id="ext_menu-20">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
@@ -57,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Maker</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Creator</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-2g" style="background-color: rgb(255, 243, 0); padding-top: 60px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -263,7 +278,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="t/cU3zY1hLjbw0z07LIyy/6yQEY5Oa6mxJXpGzgKl1i0EE7oVplVoa9l+pm15YLcuQLdtTZ/Ta1LzzybbfS1BeBsfO868npM9lr3lLo70lJ/Q6jNF7T3z6Wt+ggKLW4n" data-form-email="true">
+                        <input type="hidden" value="1AEYhFl9aqWQnzTuZOR9KC0qokK8KmmoveD5zT5TjitpWNT96t3aZnI9bpMrNyuFEgtogc8tmse5Fi19og2ZUda3kToTKzPEBsMemSvTqGbviqvS39xeRIUw8spHys++" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
